--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,11 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "setuptools>=68.2.2",
     "whitenoise[brotli]>=6.6.0",
+    "Pillow>=10.4.0",
+    "python-magic>=0.4.27; sys_platform == \"linux\"",
+    "python-magic-bin>=0.4.14; sys_platform == \"win32, darwin\"",
 ]
+
 requires-python = ">=3.10"
 license = { text = "MIT" }
 
@@ -44,7 +48,7 @@ dev = "python manage.py runserver 0.0.0.0:19003"
 createsuperuser = "python manage.py createsuperuser"
 pre_migrate = "python manage.py makemigrations"
 migrate = "python manage.py migrate"
-post_migrate = "python manage.py graph_models -g -o core.png core"
+post_migrate = "python manage.py graph_models --disable-sort-fields -g -o core.png core uploader"
 shell = "python manage.py shell"
 shellp= "python manage.py shell_plus"
 test = "python manage.py test"
