--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ setuptools==73.0.1
 six==1.16.0
 sqlparse==0.5.1
 typing-extensions==4.12.2; python_version < "3.11"
-tzdata==2024.1; sys_platform == "win32"
+wget https://github.com/marrcandre/django-drf-tutorial/raw/main/scripts/core.jsontzdata==2024.1; sys_platform == "win32"
 uritemplate==4.1.1
 urllib3==2.2.2
 virtualenv==20.26.3
